# ChangeLog for dev-games/guichan
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-games/guichan/ChangeLog,v 1.10 2007/01/16 20:35:23 mr_bones_ Exp $

  16 Jan 2007; Michael Sterrett <mr_bones_@gentoo.org>
  -guichan-0.5.0.ebuild:
  clean out older ebuild

*guichan-0.6.0 (16 Jan 2007)

  16 Jan 2007; Michael Sterrett <mr_bones_@gentoo.org>
  +guichan-0.6.0.ebuild:
  version bump

  05 Jan 2007; Tristan Heaven <nyhm@gentoo.org> guichan-0.5.0.ebuild:
  Add glut USE flag

*guichan-0.5.0 (20 Aug 2006)

  20 Aug 2006; Michael Sterrett <mr_bones_@gentoo.org>
  +guichan-0.5.0.ebuild:
  version bump

  19 Aug 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  guichan-0.4.0-r1.ebuild:
  ppc stable

*guichan-0.4.0-r1 (27 Mar 2006)

  27 Mar 2006; <Tupone@gentoo.org> +files/guichan-0.4.0-gentoo.patch,
  +guichan-0.4.0-r1.ebuild:
  Install sdlpixel.hpp, bug #118880 by Tiago Freire

  10 Sep 2005; Mike Frysinger <vapier@gentoo.org> guichan-0.4.0.ebuild:
  Remove -Werror hardcode from CXXFLAGS #105340 by Anatoly Kamchatnov.

  06 Jul 2005; David Holm <dholm@gentoo.org> guichan-0.4.0.ebuild:
  Added to ~ppc.

*guichan-0.4.0 (06 Jun 2005)

  06 Jun 2005; Mike Frysinger <vapier@gentoo.org> +guichan-0.4.0.ebuild:
  Version bump.

*guichan-0.3.0 (04 May 2005)

  04 May 2005; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by Christoph Brill (egore) #84178.