@@ -1,3 +1,0 @@
-MD5 aa122513a1089221cadbc7da20e16c0a guichan-0.6.0-src.tar.gz 2646139
-RMD160 b016a63dd37a3a552e5cbd39b2f5a82c8557f49d guichan-0.6.0-src.tar.gz 2646139
-SHA256 17d6af2f5f88fefd0116e9df8bbfb726df9dbbb809837d00b314e4399c27be30 guichan-0.6.0-src.tar.gz 2646139
