@@ -1,0 +1,3 @@
+MD5 830145f71ad4ce4c91e09808fec68c8a guichan-0.6.1.tar.gz 488857
+RMD160 7f56134b7c6400ba72ad8c7fc25eba5b62992fcf guichan-0.6.1.tar.gz 488857
+SHA256 ea4151d0f4e24baee918ec29ecc458aefe465e9caf94ce0d1f230c3c0f26ef98 guichan-0.6.1.tar.gz 488857
