@@ -1,6 +1,12 @@
 # ChangeLog for dev-games/guichan
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-games/guichan/ChangeLog,v 1.10 2007/01/16 20:35:23 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-games/guichan/ChangeLog,v 1.11 2007/03/13 20:12:05 mr_bones_ Exp $
+
+*guichan-0.6.1 (13 Mar 2007)
+
+  13 Mar 2007; Michael Sterrett <mr_bones_@gentoo.org>
+  +guichan-0.6.1.ebuild:
+  version bump; clean out old version
 
   16 Jan 2007; Michael Sterrett <mr_bones_@gentoo.org>
   -guichan-0.5.0.ebuild:
